<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		login
	 *	@date 		Thursday 15th of June 2023 02:43:14 PM
	 *	@title 		Upload Photo
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/login" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_login_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__login_ek2"
					android:background="@drawable/_bg__login_ek2_shape"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="414dp"
					android:layout_height="896dp" />


				<RelativeLayout android:id="@+id/group_142"
					android:layout_marginTop="594dp"
					android:layout_marginStart="56dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_42"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_49"
							android:background="@drawable/rectangle_49_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="306dp"
							android:layout_height="48dp" />

					</RelativeLayout>

					<TextView android:id="@+id/login_ek3"
						android:fontFamily="Poppins"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="17sp"
						android:textColor="@color/_bg__login_ek2_color"
						android:layout_marginLeft="128dp"
						android:layout_marginTop="13dp"
						android:layout_width="58dp"
						android:layout_height="33.5dp"
						android:text="@string/login_ek3_string"
						 />

				</RelativeLayout>

				<View   android:id="@+id/line_14"
					android:background="@drawable/line_14_shape"
					 android:layout_marginStart="59dp"
					android:layout_marginTop="542dp"
					android:layout_width="305dp"
					android:layout_height="1dp" />


				<RelativeLayout android:id="@+id/akar_icons_arrow_up_right"
					android:layout_marginTop="21dp"
					android:layout_marginStart="28dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector"
						android:src="@drawable/vector"
						android:contentDescription="vector"
						 android:layout_marginStart="5.87dp"
						android:layout_marginTop="5.87dp"
						android:layout_width="11.74dp"
						android:layout_height="11.74dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_452"
					android:layout_marginTop="256dp"
					android:layout_marginStart="148dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/allopet"
						android:fontFamily="Roboto"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="35sp"
						android:textColor="@color/allopet_color"
						android:layout_marginLeft="-6dp"
						android:layout_marginTop="104dp"
						android:layout_width="141dp"
						android:layout_height="69.76dp"
						android:text="@string/allopet_string"
						 />


					<RelativeLayout android:id="@+id/group_439"
						android:layout_marginTop="0dp"
						android:layout_marginStart="13dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_4204"
							android:background="@drawable/rectangle_4204_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="92.14dp"
							android:layout_height="92.14dp" />


						<RelativeLayout android:id="@+id/group_438"
							android:layout_marginTop="16dp"
							android:layout_marginStart="23dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/vector_8"
								android:src="@drawable/vector_8"
								android:contentDescription="vector_8"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="47.51dp"
								android:layout_height="59.38dp" />

							<View   android:id="@+id/rectangle_4205"
								android:background="@drawable/rectangle_4205_shape"
								 android:layout_marginStart="26dp"
								android:layout_marginTop="11dp"
								android:layout_width="4.42dp"
								android:layout_height="3.54dp" />

							<ImageView android:id="@+id/rectangle_4213"
								android:src="@drawable/rectangle_4213"
								android:contentDescription="rectangle_4213"
								 android:layout_marginStart="41dp"
								android:layout_marginTop="15dp"
								android:layout_width="4.69dp"
								android:layout_height="17.39dp" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

				<TextView android:id="@+id/don_t_have_an_account_yet__sign_up"
					android:fontFamily="Roboto"
					android:textSize="15sp"
					android:textColor="@color/allopet_color"
					android:layout_marginLeft="83dp"
					android:layout_marginTop="830dp"
					android:layout_width="267.5dp"
					android:layout_height="28.5dp"
					android:text="@string/don_t_have_an_account_yet__sign_up_string"
					 />

				<View   android:id="@+id/line_16"
					android:background="@drawable/line_16_shape"
					 android:layout_marginStart="62dp"
					android:layout_marginTop="474dp"
					android:layout_width="305dp"
					android:layout_height="1dp" />

				<TextView android:id="@+id/enter_your_email"
					android:fontFamily="Poppins"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="17sp"
					android:textColor="@color/line_14_color"
					android:layout_marginLeft="60dp"
					android:layout_marginTop="448dp"
					android:layout_width="147dp"
					android:layout_height="33.5dp"
					android:text="@string/enter_your_email_string"
					 />

				<TextView android:id="@+id/password"
					android:fontFamily="Poppins"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="17sp"
					android:textColor="@color/line_14_color"
					android:layout_marginLeft="59dp"
					android:layout_marginTop="520dp"
					android:layout_width="94dp"
					android:layout_height="33.5dp"
					android:text="@string/password_string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>